--- a/bootstrap/Dockerfile.u.3
+++ b/bootstrap/Dockerfile.u.3
@@ -1,5 +1,5 @@
 # Создание контейнера cradle/u:3 == u:+ITK-5.1+VTK-8.2_LWS
-# docker build - --tag cradle/u:3 < ./scripts/Dockerfile.u.3
+# docker build - --tag cradle/u:3 < ./bootstrap/Dockerfile.u.3
 
 FROM cradle/u:2
 
