--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "primereact": "^9.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -29,6 +30,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
+    "sass": "^1.59.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
   }
