--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
     "react": "^18.2.0",
+    "redux": "^4.2.1",
+    "react-redux": "^8.0.5",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "vite-plugin-svgr": "^2.4.0"
