--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "redux": "^4.2.1",
     "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "vite-plugin-svgr": "^2.4.0"
