--- a/web/package.json
+++ b/web/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "ami.js": "^0.32.0",
+    "bootstrap": "^5.2.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
     "react": "^18.2.0",
-    "redux": "^4.2.1",
-    "react-redux": "^8.0.5",
-    "@reduxjs/toolkit": "^1.9.3",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.2.7",
     "vite-plugin-svgr": "^2.4.0"
   },
