--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "tailwindcss": "^3.2.7",
+    "three": "^0.151.3",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
