--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "ami.js": "^0.32.0",
+    "ami.js": "0.33.0",
     "bootstrap": "^5.2.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -22,13 +22,13 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "tailwindcss": "^3.2.7",
-    "three": "^0.151.3",
+    "three": "0.125.2",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/three": "0.150.1",
+    "@types/three": "0.125.2",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
