--- a/.github/workflows/pull-request-handler.yml
+++ b/.github/workflows/pull-request-handler.yml
@@ -1,5 +1,5 @@
 name: Virtual Endoscopy. Pull-Request to main handler
-run-name: ${{ github.actor }} has opened pull-request ${{ github.event.pull_request }}
+run-name: ${{ github.actor }} has opened pull-request ${{ github.event.pull_request.number }}
 on:
   pull_request:
     types: opened
@@ -8,6 +8,8 @@ jobs:
   Test_app:
     runs-on: ubuntu-latest
     steps:
+      - name: whats in the pull-request
+        run: ${{ toJSON(github.event.pull_request) }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -18,7 +20,7 @@ jobs:
           key: node-modules-${{ hashFiles('./web/package-lock.json') }}
       - id: install
         working-directory: ./web
-        run: npm ci
+        run: npm install
       - id: build
         working-directory: ./web
         run: npm run build
@@ -31,8 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: Test_app
     steps:
-      - name: whats in the pull-request
-        run: ${{ toJSON(github.event.pull_request) }}
       - name: Approve Pull Request
         uses: juliangruber/approve-pull-request-action@v2.0.0
         with:
