--- a/.github/workflows/pull-request-handler.yml
+++ b/.github/workflows/pull-request-handler.yml
@@ -14,21 +14,21 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('./web/package-lock.json') }}
-      - id: install
-        working-directory: ./web
-        run: npm install
-      - id: build
-        working-directory: ./web
-        run: npm run build
-        continue-on-error: true
-      - if: steps.build.outcome != 'success'
-        run: echo "Build fail"; exit 1
-      - name: onSuccess
-        run: exit 0
+#      - uses: actions/cache@v3
+#        with:
+#          path: ~/.npm
+#          key: node-modules-${{ hashFiles('./web/package-lock.json') }}
+#      - id: install
+#        working-directory: ./web
+#        run: npm install
+#      - id: build
+#        working-directory: ./web
+#        run: npm run build
+#        continue-on-error: true
+#      - if: steps.build.outcome != 'success'
+#        run: echo "Build fail"; exit 1
+#      - name: onSuccess
+#        run: exit 0
   Approve_pull_request:
     runs-on: ubuntu-latest
     needs: Test_app
@@ -38,4 +38,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           number: ${{ github.event.pull_request.number }}
-          repo: juliangruber/approve-pull-request-action # optional
+          repo: Apregot/VirtualEndoscopy
