Подключение к серверу по кнопке

--- a/web/package.json
+++ b/web/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "ami.js": "0.32.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
-    "styled-components": "^5.3.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.9",
     "tailwindcss": "^3.2.7",
     "three": "0.93.0",
     "vite-plugin-svgr": "^2.4.0"
@@ -28,8 +30,8 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/three": "0.125.2",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "0.125.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
