--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run buildServer",
+    "buildServer": "cd .. && node ./scripts/buildServer.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
