--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -23,3 +23,8 @@ jobs:
       - id: build
         working-directory: ./web
         run: npm run build
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: builtServer
+          path: ./builtServer
