--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
