--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@szhsin/react-menu": "^3.5.3",
     "ami.js": "0.32.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
