--- a/.github/workflows/deploy-app-1.yml
+++ b/.github/workflows/deploy-app-1.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: tags/${{ inputs.version }}
+          ref: ${{ inputs.version }}
       - id: checkout-latest
         name: Checkout repository by latest commit
         if: ${{ steps.checkout-tag.status != 'success' }}
