Правильный запуск второго этапа деплоя

--- a/.github/workflows/deploy-app-2.yml
+++ b/.github/workflows/deploy-app-2.yml
@@ -2,7 +2,7 @@ name: Virtual Endoscopy.Deploy app.Step 2
 run-name: Sending app to production
 on:
   workflow_run:
-    workflows: [Virtual Endoscopy.Test app]
+    workflows: [Virtual Endoscopy.Deploy app.Step 1]
     types: [completed]
     branches: [main]
 jobs:
